tests/errors/4_type_errors/boolop-test3.ifj16.java
class Main {
    static boolean run() {
        boolean a = 0;  // only false accepted
    }
}
